--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.urbandroid.doze"
-          android:installLocation="auto"
-          android:versionCode="1"
-          android:versionName="1.0">
+<manifest
+	package="com.urbandroid.doze"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:installLocation="auto"
+	android:versionCode="1"
+	android:versionName="1.0">
 
-  <uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 
-  <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true"
-                    android:largeScreens="true" android:resizeable="true"/>
-  <application
-      android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name">
-    <activity android:name="com.urbandroid.doze.MainActivity"
-                android:label="@string/app_name"
-                android:exported="true">
-        <intent-filter>
-          <action android:name="android.intent.action.MAIN"/>
-          <category android:name="android.intent.category.DEFAULT"/>
-          <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
-      </activity>
+	<supports-screens
+		android:anyDensity="true"
+		android:largeScreens="true"
+		android:normalScreens="true"
+		android:resizeable="true"
+		android:smallScreens="true"/>
+	<application
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name">
+		<activity
+			android:name="com.urbandroid.doze.MainActivity"
+			android:exported="true"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
 
-    <service android:name=".DozeService"/>
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
 
-  </application>
+		<service
+			android:name=".DozeService"
+			android:process=":remote"/>
+
+	</application>
 
 </manifest>
